adjusts responsives - @media

--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
           <h1>
             If you have time, you should read more about this incredible human
             being on his
-            <a href="https://en.wikipedia.org/wiki/Norman_Borlaug"
+            <a
+              href="https://en.wikipedia.org/wiki/Norman_Borlaug"
+              target="_blank"
               >Wikipedia entry</a
             >.
           </h1>
